Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -39,9 +39,66 @@ We were inspired by <a href="https://www.youtube.com/watch?v=vkfXBGnDplQ">a pres
 <p>In this project, we apply text mining techniques on a large corpus of movie plot summaries to gain non-obvious insights to the content of the movies. We try to create models of movies for the purpose of studying the nature of collective user preferences. We further do an analysis of the preferences across different geographies. Here we assume that movie preferences are closely tied to the cultural and political environment of a country or region and understanding these nuances will enable us to predict what types of content are preferred by the people of each region. We also carry out a similar analysis across the dimension of time to study the nature of variations in the preference patterns.</p>
 
 <h1>
-<a id="data" class="anchor" href="#data" aria-hidden="true"><span class="octicon octicon-link"></span></a>Data</h1>
+<a id="data-sources" class="anchor" href="#data-sources" aria-hidden="true"><span class="octicon octicon-link"></span></a>Data Sources</h1>
 
-<p>TODO</p>
+<h2>
+<a id="imdb" class="anchor" href="#imdb" aria-hidden="true"><span class="octicon octicon-link"></span></a>IMDB</h2>
+
+<h2>
+<a id="wikipedia" class="anchor" href="#wikipedia" aria-hidden="true"><span class="octicon octicon-link"></span></a>Wikipedia</h2>
+
+<h2>
+<a id="boxofficemojo" class="anchor" href="#boxofficemojo" aria-hidden="true"><span class="octicon octicon-link"></span></a>Boxofficemojo</h2>
+
+<h1>
+<a id="data-cleaning-and-feature-extraction" class="anchor" href="#data-cleaning-and-feature-extraction" aria-hidden="true"><span class="octicon octicon-link"></span></a>Data Cleaning and Feature Extraction</h1>
+
+<p>Details of stemming, tokenization, POS tagging etc.</p>
+
+<h1>
+<a id="topic-modeling-of-plots" class="anchor" href="#topic-modeling-of-plots" aria-hidden="true"><span class="octicon octicon-link"></span></a>Topic Modeling of Plots</h1>
+
+<h2>
+<a id="lda-algorithm" class="anchor" href="#lda-algorithm" aria-hidden="true"><span class="octicon octicon-link"></span></a>LDA Algorithm</h2>
+
+<h2>
+<a id="topics-by-country-of-origin" class="anchor" href="#topics-by-country-of-origin" aria-hidden="true"><span class="octicon octicon-link"></span></a>Topics by Country of Origin</h2>
+
+<h2>
+<a id="topics-by-popularity-across-countries" class="anchor" href="#topics-by-popularity-across-countries" aria-hidden="true"><span class="octicon octicon-link"></span></a>Topics by Popularity across Countries</h2>
+
+<h2>
+<a id="topics-by-film-industry" class="anchor" href="#topics-by-film-industry" aria-hidden="true"><span class="octicon octicon-link"></span></a>Topics by Film Industry</h2>
+
+<h2>
+<a id="changes-over-time" class="anchor" href="#changes-over-time" aria-hidden="true"><span class="octicon octicon-link"></span></a>Changes over Time</h2>
+
+<h1>
+<a id="distributed-representations-of-plots" class="anchor" href="#distributed-representations-of-plots" aria-hidden="true"><span class="octicon octicon-link"></span></a>Distributed Representations of Plots</h1>
+
+<h2>
+<a id="doc2vec-algorithm" class="anchor" href="#doc2vec-algorithm" aria-hidden="true"><span class="octicon octicon-link"></span></a>Doc2Vec Algorithm</h2>
+
+<h2>
+<a id="movies-by-country-of-origin" class="anchor" href="#movies-by-country-of-origin" aria-hidden="true"><span class="octicon octicon-link"></span></a>Movies by Country of Origin</h2>
+
+<h2>
+<a id="movies-by-popularity-across-countries" class="anchor" href="#movies-by-popularity-across-countries" aria-hidden="true"><span class="octicon octicon-link"></span></a>Movies by Popularity across Countries</h2>
+
+<h2>
+<a id="similarity-of-countries" class="anchor" href="#similarity-of-countries" aria-hidden="true"><span class="octicon octicon-link"></span></a>Similarity of Countries</h2>
+
+<h2>
+<a id="similarity-of-industries" class="anchor" href="#similarity-of-industries" aria-hidden="true"><span class="octicon octicon-link"></span></a>Similarity of Industries</h2>
+
+<h2>
+<a id="changes-over-time-1" class="anchor" href="#changes-over-time-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Changes over Time</h2>
+
+<h1>
+<a id="conclusion" class="anchor" href="#conclusion" aria-hidden="true"><span class="octicon octicon-link"></span></a>Conclusion</h1>
+
+<h1>
+<a id="references" class="anchor" href="#references" aria-hidden="true"><span class="octicon octicon-link"></span></a>References</h1>
         </section>
 
         <aside id="sidebar">
